Fixed bug #50224 where float without decimals were converted to integer